--- a/part2/phonebook/src/index.css
+++ b/part2/phonebook/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  padding: 10px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -7,7 +8,18 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.success-msg,
+.error-msg {
+  font-size: 20px;
+  border: none;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
+.success-msg {
+  background-color: lightgreen;
+}
+
+.error-msg {
+  background-color: tomato;
 }
